Modal: fix close button on small screens

--- a/src/assets/less/objects/modal.less
+++ b/src/assets/less/objects/modal.less
@@ -344,6 +344,7 @@
 
     .modal--show .modal-close:after {
         content: attr(data-close);
+        font-family: @font;
         font-size: 1em;
         padding: 0.5em 1em;
     }
